2006-09-25  Alp Toker  <alp@atoker.com>

	* tools/BansheeDBusClient.cs: Use DApplication.SessionConnection singleton

2006-09-25  James Willcox  <snorp@snorp.net>

	* src/Banshee.Plugins/Daap/DaapSource.cs:
	* src/Banshee.Plugins/Daap/DaapCore.cs:

	Call DAAP.Client.Logout in all cases except when we know the server
	has just gone away.

2006-09-25  Alp Toker  <alp@atoker.com>

	* dbus-sharp/*: Update bundled NDesk.DBus, NDesk.DBus.GLib.
	Silence warning messages, fix big-endian (again), fix UTF-8, better
	exception handling.

2006-09-25  James Willcox  <snorp@snorp.net>

	* src/Banshee.Plugins/Daap/daap-sharp/*: update to latest
	* src/Banshee.Plugins/Daap/DaapSource.cs: don't call DAAP.Client.Logout
	for now since it sometimes causes hangs for a long time when the
	server is unavailable (sigh)

2006-09-24  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.MediaEngine/Helix/HelixRemotePlayer.cs:
	* src/Banshee.MediaEngine/Helix/HelixRemotePlayerEngine.cs: Use properties
	in the DBus interface instead of Get/Set methods now that it is possible
	with the lovely managed DBus

	* configure.ac: Require helix-dbus-server 0.3.0 if Helix support is 
	desired

	* src/Banshee.Base/NetworkDetect.cs:
	* src/Banshee.Base/NetworkManager/Device.cs:
	* src/Banshee.Base/NetworkManager/Manager.cs:
	* src/Banshee.Base/NetworkManager/Network.cs: Updated copyright

2006-09-24  Alp Toker  <alp@atoker.com>

	* src/Main.cs: Remove last vestiges of the old dbus-sharp
	* configure.ac:
	* src/Makefile.am:
	* src/Banshee.Base/Makefile.am:
	Do not depend on the old dbus binding. It is obsoleted by managed dbus.

2006-09-24  Alp Toker  <alp@atoker.com>

	* src/Banshee.Base/Globals.cs:
	* src/Banshee.Base/NetworkDetect.cs:
	* src/Banshee.Base/NetworkManager/Device.cs:
	* src/Banshee.Base/NetworkManager/Manager.cs:
	* src/Banshee.Base/NetworkManager/Network.cs:
	Use managed dbus for NetworkManager client
	Note that the signals still need to be ported to ordinary events.
