@@ -1,3 +1,8 @@
+2006-09-25  James Willcox  <snorp@snorp.net>
+
+	* src/Banshee.Plugins/Daap/DaapCore.cs: oops, be more careful
+	when determining the track format.
+
 2006-09-25  Alp Toker  <alp@atoker.com>
 
 	* tools/BansheeDBusClient.cs: Use DApplication.SessionConnection singleton
